# atlas

./: CMakeLists.txt  README.md
Atlas 4/Source/: AtlasLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  SynthSound.h  SynthVoice.h
